pxc/tests/test_001_px/nf2.px
import common -;

public namespace nf2;

function int foo(int x)
{
	function int foo1(int v) {
		return v + x;
	}
	int y = foo1(5);
	return y;
}

function int bar(int x)
{
	function int bar1(int v) {
		return v + 1;
	}
	int y = bar1(x);
	return y;
}

function int baz(int x)
{
	function int up2() {
	  return x;
	}
	function int baz1(int y) {
		function int baz2(int z) {
			return x + y + z;
		}
		return x + baz2(1);
		// return up2() + baz2(1); // error
	}
	return baz1(2);
}

println(foo(3));
println(bar(3));
println(baz(3));

